--- a/fortune500/donate.html
+++ b/fortune500/donate.html
@@ -13,21 +13,14 @@
 			<div class="navbar"> 
 				<a href = "recipes.html" >RECIPES</a>
 				<a href = "shop.html" >SHOP</a>
-				<a href = "dontate.html" >DONATE</a>
+				<a href = "donate.html" class="navhere">DONATE</a>
 			    <a href = "share.html" >SHARE</a>						  
 				</div> 
 				<div class="search"><a href="search.html"><img src="img/search.png" alt="Search Here" border="0" class="search_img"/></a></div>
 		</div>
 		<div class="content">
-			CONTENT GOES HERE
-			
-			
-			
+	Donate
 		</div>
-		
-	</div>
-	</div>
-	
 	
 </body>
 </html>
