--- a/fortune500/OLD/innovation.html
+++ b/fortune500/OLD/innovation.html
@@ -11,23 +11,17 @@
 		<div class="topofpage"> 
 			<div class="logo"><a href="index.html"><img src="img/logo.png" alt="Hershey Logo" border="0" class="logo_img"/></a></div>
 			<div class="navbar"> 
-				<a href = "recipes.html" >RECIPES</a>
-				<a href = "shop.html" >SHOP</a>
-				<a href = "dontate.html" >DONATE</a>
-			    <a href = "share.html" >SHARE</a>						  
+				<a href = "ourstory.html">OUR STORY</a>
+				<a href = "innovation.html" class="navhere">INNOVATION</a>
+				<a href = "whatsinside.html" >WHAT'S INSIDE</a>
+				<a href = "sustainability.html" >SUSTAINABILITY</a>
+			    <a href = "blog.html" >BLOG</a>						  
 				</div> 
 				<div class="search"><a href="search.html"><img src="img/search.png" alt="Search Here" border="0" class="search_img"/></a></div>
 		</div>
 		<div class="content">
-			CONTENT GOES HERE
-			
-			
-			
+	Innovation
 		</div>
-		
-	</div>
-	</div>
-	
 	
 </body>
 </html>
