--- a/fortune500/recipes.html
+++ b/fortune500/recipes.html
@@ -11,23 +11,16 @@
 		<div class="topofpage"> 
 			<div class="logo"><a href="index.html"><img src="img/logo.png" alt="Hershey Logo" border="0" class="logo_img"/></a></div>
 			<div class="navbar"> 
-				<a href = "recipes.html" >RECIPES</a>
+				<a href = "recipes.html" class="navhere">RECIPES</a>
 				<a href = "shop.html" >SHOP</a>
-				<a href = "dontate.html" >DONATE</a>
+				<a href = "donate.html" >DONATE</a>
 			    <a href = "share.html" >SHARE</a>						  
 				</div> 
 				<div class="search"><a href="search.html"><img src="img/search.png" alt="Search Here" border="0" class="search_img"/></a></div>
 		</div>
 		<div class="content">
-			CONTENT GOES HERE
-			
-			
-			
+	Recipes
 		</div>
-		
-	</div>
-	</div>
-	
 	
 </body>
 </html>
