--- a/HersheyAtHome/index.html
+++ b/HersheyAtHome/index.html
@@ -4,10 +4,16 @@
 <head>
   <meta charset="utf-8">
   <title>Hershey at Home</title>
-  <meta name="description" content="Basic Grid">
-  <meta name="keywords" content="html, css,floats, float left, float right, clearfix, simple grid">  
+  <meta name="description" content="site dedicated to baking with Hershey products at home">
+  <meta name="keywords" content="chocolate, Hershey, baking">  
+  <meta name="robots" content="noindex, nofollow">
   <meta name="author" content="Intro to Web"> 
-    
+  <meta name="language" content="English">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="revisit-after" content="14 days">
+	
+	
+	
   <!-- THIS IS A LINK TO THE EXTERNAL .CSS --> 
   <link rel="stylesheet" href="css/grid.css">
   <link rel="stylesheet" href="css/layout.css">
